<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05352798" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCollection"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/geometric_figures_branco"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMenu"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/open_menu"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/saldo"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonCollection"
        app:layout_constraintStart_toEndOf="@+id/buttonMenu"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagePayBck"
        android:layout_width="100dp"
        android:layout_height="66dp"
        android:layout_marginTop="145dp"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_background" />

    <ImageView
        android:id="@+id/imageInvestBck"
        android:layout_width="100dp"
        android:layout_height="66dp"
        android:layout_marginTop="145dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_background" />

    <ImageView
        android:id="@+id/imageTransfBck"
        android:layout_width="100dp"
        android:layout_height="66dp"
        android:layout_marginTop="145dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_background" />

    <Button
        android:id="@+id/buttonPay"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/price"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/imagePayBck" />

    <Button
        android:id="@+id/buttonTransf"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/share"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/imageTransfBck" />

    <Button
        android:id="@+id/buttonInvest"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/chart"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/imageInvestBck" />

    <TextView
        android:id="@+id/textInvest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/invest"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonInvest"
        app:layout_constraintStart_toStartOf="@+id/buttonInvest"
        app:layout_constraintTop_toBottomOf="@+id/buttonInvest" />

    <TextView
        android:id="@+id/textTransf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/transfer"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonTransf"
        app:layout_constraintStart_toStartOf="@+id/buttonTransf"
        app:layout_constraintTop_toBottomOf="@+id/buttonTransf" />

    <TextView
        android:id="@+id/textPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pay"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonPay"
        app:layout_constraintStart_toStartOf="@+id/buttonPay"
        app:layout_constraintTop_toBottomOf="@+id/buttonPay" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastest_statements"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerStatement"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="R$ 250,00"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/buttonInsurance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="Contratar Seguro                                          >"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/buttonFriend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@android:color/white"
        android:text="Convidar Amigo                                               >"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/buttonInsurance" />

    <Button
        android:id="@+id/buttonHomeBottom"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:background="@drawable/browser"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/textHomeBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonHomeBottom"
        app:layout_constraintStart_toStartOf="@+id/buttonHomeBottom"
        app:layout_constraintTop_toBottomOf="@+id/buttonHomeBottom" />

    <Button
        android:id="@+id/buttonCollectionBottom"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:background="@drawable/geometric_figures"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/textCollectionBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/collection"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonCollectionBottom"
        app:layout_constraintStart_toStartOf="@+id/buttonCollectionBottom"
        app:layout_constraintTop_toBottomOf="@+id/buttonCollectionBottom" />

    <Button
        android:id="@+id/buttonDebitsBottom"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/paper"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/textReceiptBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/debit"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonDebitsBottom"
        app:layout_constraintStart_toStartOf="@+id/buttonDebitsBottom"
        app:layout_constraintTop_toBottomOf="@+id/buttonDebitsBottom" />

</androidx.constraintlayout.widget.ConstraintLayout>